@@ -2083,6 +2083,30 @@ WIDGET_DEFAULT = {
         "column_index_carcass": 1,
         "column_index_rate_of_change": 2,
     },
+    "tyre_inner_layer": {
+        "enable": True,
+        "update_interval": 20,
+        "position_x": 249,
+        "position_y": 525,
+        "opacity": 0.9,
+        "font_name": "Consolas",
+        "font_size": 15,
+        "font_weight": "bold",
+        "bar_padding": 0.2,
+        "horizontal_gap": 0,
+        "vertical_gap": 0,
+        "inner_gap": 0,
+        "heatmap_name": "tyre_default",
+        "swap_style": False,
+        "show_inner_center_outer": True,
+        "show_degree_sign": False,
+        "leading_zero": 2,
+        "font_color_inner_layer": "#000000",
+        "bkg_color_inner_layer": "#222222",
+        "show_tyre_compound": True,
+        "font_color_tyre_compound": "#666666",
+        "bkg_color_tyre_compound": "#222222",
+    },
     "tyre_load": {
         "enable": True,
         "update_interval": 20,
@@ -2126,12 +2150,12 @@ WIDGET_DEFAULT = {
         "position_x": 249,
         "position_y": 525,
         "opacity": 0.9,
-        "layout": 0,
         "font_name": "Consolas",
         "font_size": 15,
         "font_weight": "bold",
         "bar_padding": 0.2,
-        "bar_gap": 2,
+        "horizontal_gap": 0,
+        "vertical_gap": 0,
         "inner_gap": 0,
         "heatmap_name": "tyre_default",
         "swap_style": False,
@@ -2140,14 +2164,9 @@ WIDGET_DEFAULT = {
         "leading_zero": 2,
         "font_color_surface": "#000000",
         "bkg_color_surface": "#222222",
-        "show_innerlayer": True,
-        "font_color_innerlayer": "#000000",
-        "bkg_color_innerlayer": "#222222",
         "show_tyre_compound": True,
         "font_color_tyre_compound": "#666666",
         "bkg_color_tyre_compound": "#222222",
-        "column_index_surface": 1,
-        "column_index_innerlayer": 2,
     },
     "tyre_wear": {
         "enable": True,
